requested changes and naming change